# NootropicRedditScrapePPM

./: .env.example  .gitignore  .replit  CITATION.cff  COMPLIANCE.md  LICENSE  README.md  SETUP.md  TODO.md  anonymization_audit.json  app.py  commit_msg.txt  database.py  package_for_sharing.py  perceptual_map.py  pyproject.toml  pytest_out.txt  replit.md  requirements.txt  tmp_test_out.txt  vulnerability_audit_plan.txt
core/: database.py  schemas.py
docs/: ARCHITECTURE.md  CODEMAP.md  Quote_Admission_Rules.md  anaconda_setup.md  bqah_assistant_metaprompt.md  bqah_extraction_reference.md  codebook_reddit_interactions.md  data_handling.md  data_schema.md  dependencies.txt  netnographic_roadmap.md  osf_setup_guide.md  research_scope.md  user_guide.md  zotero_integration_writeup.md
modules/: codebook.py  dashboard.py  data_manager.py  llm_coder.py  module3_aggregation.py  module4_audit_trail.py  ollama_client.py  reddit_scraper.py  reliability.py  thesis_export.py  topic_modeling.py
nootropics-research-replication_20251202_114848/: README.md  manifest.json
nootropics-research-replication_20251203_154827/: README.md  manifest.json  verify_package.py
nootropics-research-replication_20251203_160056/: README.md  manifest.json  verify_package.py
outputs/: frozen_full_corpus.json  frozen_numbers.json  frozen_submissions.json
samples/: README.md  synthetic_nootropics_sample.csv
scripts/: bqah_coder.py  bqah_import.py  calculate_irr_kappa.py  export_coded_data.py  generate_mock_ppm_data.py  import_external_data.py  scrub_deleted_data.py  verify_install.py  verify_mvp.py
services/: job_manager.py  reddit_json_service.py  reddit_service.py
tests/: test_import_external_data.py  test_reddit_helpers.py  test_reddit_json_service.py  (+1 more)
(+27 files in other folders)
