[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NootropicRedditScrapePPM"
version = "0.1.0"
description = "Academic Research Tool - Nootropics Market Segmentation"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "pyzotero>=1.5.0",
]

